# python_package

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  _quarto.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: _quarto.yml  api.md  cicd.md  development.md  doc_genration.md  index.md  installation.md  usage.md
docs/en/: cicd.md  doc_generation.md  index.md  usage.md
docs/fr/: index.md
docs/reference/: DataFrameMathOps.qmd  add.qmd  divide.qmd  index.qmd  multiply.qmd  subtract.qmd
examples/: example_usage.py
sphinx/: conf.py  index.rst
src/mypackage/: __init__.py  math_ops.py
tests/: test_math_ops.py
