[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1.0"
description = "Basic arithmetic operations on pandas DataFrames"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
maintainers = [{ name = "Your Name", email = "your.email@example.com" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.0.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/mounirbs/python_package"
Documentation = "https://mounirbs.github.io/python_package/"
Repository = "https://github.com/mounirbs/python_package.git"
Issues = "https://github.com/mounirbs/python_package/issues"
Changelog = "https://github.com/mounirbs/python_package/blob/main/CHANGELOG.md"

[project.optional-dependencies]
sca = [
    "pylint"
]
test = [
    "pytest",
    "pytest-cov",
    "codecov"
]
doc = [
    "quarto",
    "quarto-cli",
    "quartodoc"    
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = "test_*.py"
